umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_h2so4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["H#v" "O#n2#v2" "S#v6" "O#n2#v2" "O#n2#v2" "O#n2#v2" "H#v"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "2"] [2 5 "1"] [5 6 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["H#v" "O#n2#v2" "S#v6" "O#n2#v2" "O#n2#v2" "O#n2#v2" "H#v"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "2"] [2 5 "1"] [5 6 "1"]]}
    :success true}}
