umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_h3po3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["H#v" "P#v5" "O#n2#v2" "O#n2#v2" "O#n2#v2" "H#v" "H#v"]
      :bonds [
        [0 1 :single]
        [1 2 :double]
        [1 3 :single]
        [1 4 :single]
        [3 5 :single]
        [4 6 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["H#v" "P#v5" "O#n2#v2" "O#n2#v2" "O#n2#v2" "H#v" "H#v"]
      :bonds [
        [0 1 :single]
        [1 2 :double]
        [1 3 :single]
        [1 4 :single]
        [3 5 :single]
        [4 6 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
