umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_hclo2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["H" "O#n2" "Cl#n2" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["H" "O#n2" "Cl#n2" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["H" "O#n2" "Cl#n2" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["H" "O#n2" "Cl#n2" "O#n2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]}
    :success true
    :tie-breaks []}}
