umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_hclo4.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["H#v" "O#n2#v2" "Cl#v7" "O#n2#v2" "O#n2#v2" "O#n2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "2"] [2 5 "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["H#v" "O#n2#v2" "Cl#v7" "O#n2#v2" "O#n2#v2" "O#n2#v2"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "2"] [2 5 "2"]] :charge 0 :spin "#u0 #s1"}}}
