umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_if5.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["I#n#v5" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single] [0 5 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["I#n#v5" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v" "F#n3#v"]
      :bonds [[0 1 :single] [0 2 :single] [0 3 :single] [0 4 :single] [0 5 :single]]}
    :success true}}
