umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_p4o10.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "P#v5"
        "P#v5"
        "P#v5"
        "P#v5"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"]
      :bonds [
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]
        [0 10 :double]
        [1 4 :single]
        [1 7 :single]
        [1 8 :single]
        [1 11 :double]
        [2 5 :single]
        [2 7 :single]
        [2 9 :single]
        [2 12 :double]
        [3 6 :single]
        [3 8 :single]
        [3 9 :single]
        [3 13 :double]]}
    :success true}
  :counts {
    :output {
      :atoms [
        "P#v5"
        "P#v5"
        "P#v5"
        "P#v5"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"
        "O#n2#v2"]
      :bonds [
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]
        [0 10 :double]
        [1 4 :single]
        [1 7 :single]
        [1 8 :single]
        [1 11 :double]
        [2 5 :single]
        [2 7 :single]
        [2 9 :single]
        [2 12 :double]
        [3 6 :single]
        [3 8 :single]
        [3 9 :single]
        [3 13 :double]]}
    :success true}}
