umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_po43-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "P#v5" "1" "O#n2#v2" "2" "O#c-#n3#v" "3" "O#c-#n3#v" "4" "O#c-#n3#v"} :bonds [[0 1 "2"] [0 2 "1"] [0 3 "1"] [0 4 "1"]] :charge -3 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "P#v5" "1" "O#n2#v2" "2" "O#c-#n3#v" "3" "O#c-#n3#v" "4" "O#c-#n3#v"} :bonds [[0 1 "2"] [0 2 "1"] [0 3 "1"] [0 4 "1"]] :charge -3 :spin "#u0 #s1"}}}
