umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_pocl3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["P#v5" "O#n2#v2" "Cl#n3#v" "Cl#n3#v" "Cl#n3#v"] :bonds [[0 1 "2"] [0 2 "1"] [0 3 "1"] [0 4 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["P#v5" "O#n2#v2" "Cl#n3#v" "Cl#n3#v" "Cl#n3#v"] :bonds [[0 1 "2"] [0 2 "1"] [0 3 "1"] [0 4 "1"]] :charge 0 :spin "#u0 #s1"}}}
